--- a/landing/development/sass/modules/_columns.scss
+++ b/landing/development/sass/modules/_columns.scss
@@ -5,6 +5,11 @@
         margin-top: 6.25rem;
         text-align: center;
         padding: 4.375rem 0 3.3rem 0;
+
+        @include mobileWidth {
+            padding: 2rem 0;
+            margin-top: 0;
+        }
     }
 
     &-gutters > div{
