--- a/landing/development/sass/modules/_hero-section.scss
+++ b/landing/development/sass/modules/_hero-section.scss
@@ -15,6 +15,10 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 2rem;
+
+        @include mobileWidth {
+            margin-bottom: 0.714rem; 
+        }
     }
 
     div.hero-app-view {
@@ -22,8 +26,20 @@
         position: relative;
         left: 50%;
         transform: translate(-50%, 8px);
+
+        @include mobileWidth {
+            position: static;
+            transform: translateX(0);
+            width: 100%;
+            
+            img {
+                width: 100%;
+            }
+        }
+
         
-        &::after {
+        
+        &::before {
             display: block;
             content: " ";
             width: 227px;
@@ -34,6 +50,17 @@
             bottom: 6.25rem;
             right: 0;
             transform: translateX(120%);
+
+            @include mobileWidth {
+                position: relative;
+                top: 0;
+                left: 50%;
+                margin-bottom: 1rem;
+                display: inline-block;
+                transform: translateX(-50%);
+                width: 175px;
+                height: 46px;
+            }
         }
     }
 }
