--- a/landing/development/sass/modules/_how-to-videos.scss
+++ b/landing/development/sass/modules/_how-to-videos.scss
@@ -15,12 +15,17 @@
         margin-right: 2.5rem;
         text-align: center;
 
+        @include mobileWidth {
+            margin-right: 0;
+            margin-bottom: 2rem;
+        }
+
         @include tabletWidth {
             max-width: 11.3rem;
         }
 
         img {
-            width: auto;
+            width: 100%;
         }
     }
 
