--- a/landing/assets/css/style.css
+++ b/landing/assets/css/style.css
@@ -426,6 +426,9 @@ h3 {
   line-height: 1.35em;
   letter-spacing: 0px;
   font-weight: 400; }
+  @media (max-width: 576px) {
+    h3 {
+      font-size: 1.715rem; } }
 
 h4 {
   font-size: 2.125rem;
@@ -451,6 +454,22 @@ h6 {
   @media (max-width: 576px) {
     h6 {
       font-size: 1rem; } }
+
+@media (max-width: 576px) {
+  .left-padding-title {
+    padding-left: 7.5rem;
+    position: relative;
+    height: 75px; }
+    .left-padding-title:before {
+      display: block;
+      content: '';
+      height: 75px;
+      width: 75px;
+      background: transparent url(/assets/images/apple-pay-icon.png) center center no-repeat;
+      background-size: contain;
+      position: absolute;
+      top: 0;
+      left: 0; } }
 
 .main-wrapper {
   max-width: 1200px;
@@ -503,6 +522,9 @@ h6 {
     position: relative; }
   .main-navigation img.logo {
     vertical-align: middle; }
+    @media (max-width: 576px) {
+      .main-navigation img.logo {
+        max-width: 86px; } }
   .main-navigation nav {
     display: inline-block; }
     .main-navigation nav.secondary-navigation {
@@ -564,6 +586,90 @@ h6 {
           transition: color .05s linear; }
           .main-navigation nav ul li a:hover {
             color: #000; }
+    .main-navigation nav.lang-nav-mobile {
+      position: absolute;
+      left: 50%; }
+      .main-navigation nav.lang-nav-mobile ul {
+        margin-left: 0;
+        padding-left: 0;
+        position: relative;
+        z-index: 23;
+        margin: 0; }
+        .main-navigation nav.lang-nav-mobile ul li {
+          display: block; }
+          .main-navigation nav.lang-nav-mobile ul li:hover ul {
+            opacity: 1;
+            visibility: visible; }
+          .main-navigation nav.lang-nav-mobile ul li ul {
+            position: absolute;
+            left: 50%;
+            -webkit-transform: translate(-50%, 10px);
+                    transform: translate(-50%, 10px);
+            display: block;
+            opacity: 0;
+            visibility: hidden;
+            background-color: #fff;
+            padding: .5rem 0;
+            box-shadow: 0 0 4px rgba(255, 255, 255, 0.4); }
+            .main-navigation nav.lang-nav-mobile ul li ul li a {
+              display: inline-block;
+              padding: 0 1rem; }
+          .main-navigation nav.lang-nav-mobile ul li a {
+            line-height: 24px; }
+      .main-navigation nav.lang-nav-mobile img {
+        width: 17px;
+        height: 17px;
+        position: relative;
+        top: 3px; }
+    .main-navigation nav.lang-nav-mobile > ul::after {
+      content: '';
+      width: 17px;
+      height: 24px;
+      display: inline-block;
+      background: transparent url("/assets/images/arrow-down.png") center center no-repeat;
+      position: absolute;
+      right: -22px;
+      top: 0; }
+  .main-navigation div.nav-burger {
+    position: absolute;
+    right: 2rem;
+    width: 24px;
+    height: 24px;
+    background: transparent url("/assets/images/nav-burger.png") center center no-repeat;
+    background-size: contain;
+    cursor: pointer; }
+    .main-navigation div.nav-burger.close-nav {
+      background: transparent url("/assets/images/close-menu.png") center center no-repeat;
+      background-size: 80%; }
+  .main-navigation .main-nav-mobile {
+    position: absolute;
+    width: 100%;
+    margin: 0;
+    top: 3rem;
+    left: 0;
+    padding: 0;
+    z-index: 22;
+    display: none !important; }
+    .main-navigation .main-nav-mobile ul {
+      width: 100%;
+      background-color: #363636;
+      margin: 0;
+      padding-left: 0; }
+      .main-navigation .main-nav-mobile ul li {
+        display: block;
+        margin-right: 0;
+        overflow: hidden; }
+        .main-navigation .main-nav-mobile ul li a {
+          display: inline-block;
+          padding: .4rem 2rem;
+          margin: 0;
+          width: 100%;
+          color: #fff; }
+          .main-navigation .main-nav-mobile ul li a:hover {
+            background-color: rgba(255, 255, 255, 0.8); }
+  @media (max-width: 576px) {
+    .main-navigation .show-menu {
+      display: block !important; } }
   .main-navigation::after {
     content: '';
     clear: both;
@@ -690,8 +796,30 @@ h6 {
   .card-devices p {
     margin-top: 10px; }
 
+.icon-left {
+  position: relative; }
+  .icon-left h3 {
+    margin-top: 0; }
+  .icon-left::before {
+    display: block;
+    content: '';
+    height: 65px;
+    width: 65px;
+    background: transparent url("/assets/images/apple-pay-icon.png") center center no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    -webkit-transform: translateX(-150%);
+            transform: translateX(-150%); }
+    @media (max-width: 576px) {
+      .icon-left::before {
+        display: none; } }
+
 .how-to-video h6 {
   margin-bottom: 1rem; }
+  @media (max-width: 576px) {
+    .how-to-video h6 {
+      font-size: 16px; } }
 
 .how-to-video img {
   display: block;
@@ -803,28 +931,6 @@ footer {
 .center {
   text-align: center; }
 
-.icon-left {
-  position: relative; }
-  .icon-left h3 {
-    margin-top: 0; }
-  .icon-left::before {
-    display: block;
-    content: '';
-    height: 65px;
-    width: 65px;
-    background: transparent url("/assets/images/apple-pay-icon.png") center center no-repeat;
-    background-size: contain;
-    position: absolute;
-    top: 0;
-    -webkit-transform: translateX(-150%);
-            transform: translateX(-150%); }
-    @media (max-width: 576px) {
-      .icon-left::before {
-        position: static;
-        -webkit-transform: translateX(0);
-                transform: translateX(0);
-        margin-bottom: 1rem; } }
-
 .align-right {
   float: right; }
   .align-right::after::after {
@@ -843,6 +949,9 @@ footer {
 
 .move-image-down .col-5 {
   position: relative; }
+  @media (max-width: 576px) {
+    .move-image-down .col-5 {
+      right: -2.1rem; } }
   .move-image-down .col-5 img {
     position: absolute;
     bottom: -6.25rem; }
@@ -873,3 +982,11 @@ footer {
   padding: 1.9rem !important; }
   .phone-screen-mobile img {
     width: 100%; }
+
+@media (max-width: 576px) {
+  .margin-top-mobile {
+    margin-top: 2.5rem; } }
+
+@media (max-width: 576px) {
+  .center-mobile {
+    text-align: center; } }
