--- a/landing/development/sass/base/_general.scss
+++ b/landing/development/sass/base/_general.scss
@@ -2,32 +2,6 @@
     text-align: center;
 }
 
-.icon-left {
-    position: relative;
-
-    h3 {
-        margin-top: 0;
-    }
-
-    &::before {
-        display: block;
-        content: '';
-        height: 65px;
-        width: 65px;
-        background: transparent url('/assets/images/apple-pay-icon.png') center center no-repeat;
-        background-size: contain;
-        position: absolute;
-        top: 0;
-        transform: translateX(-150%);
-
-        @include mobileWidth {
-            position: static;
-            transform: translateX(0);
-            margin-bottom: 1rem;
-        }
-    }
-}
-
 .align-right {
     float: right;
 
@@ -51,6 +25,9 @@
 .move-image-down {
     .col-5 {
         position: relative;
+        @include mobileWidth {
+            right: -2.1rem;
+        }
         
         img {
             position: absolute;
@@ -93,5 +70,17 @@
 
     img {
         width: 100%;
+    }
+}
+
+.margin-top-mobile {
+    @include mobileWidth {
+        margin-top: 2.5rem;
+    }
+}
+
+.center-mobile {
+    @include mobileWidth {
+        text-align: center;
     }
 }
