--- a/landing/development/sass/base/_typography.scss
+++ b/landing/development/sass/base/_typography.scss
@@ -36,6 +36,10 @@ h3 {
     line-height: $h3_line-height;
     letter-spacing: $h3_letter-spacing;
     font-weight: $h3_weight;
+
+    @include mobileWidth {
+        font-size: 1.715rem;
+    }
 }
 
 h4 {
@@ -66,5 +70,25 @@ h6 {
 
     @include mobileWidth {
         font-size: 1rem;
+    }
+}
+
+.left-padding-title {
+    @include mobileWidth {
+        padding-left: 7.5rem;
+        position: relative;
+        height: 75px;
+
+        &:before {
+            display: block;
+            content: '';
+            height: 75px;
+            width: 75px;
+            background: transparent url(/assets/images/apple-pay-icon.png) center center no-repeat;
+            background-size: contain;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
     }
 }
