--- a/landing/development/sass/modules/_card-devices.scss
+++ b/landing/development/sass/modules/_card-devices.scss
@@ -9,3 +9,27 @@
         margin-top: 10px;
     }
 }
+
+.icon-left {
+    position: relative;
+
+    h3 {
+        margin-top: 0;
+    }
+
+    &::before {
+        display: block;
+        content: '';
+        height: 65px;
+        width: 65px;
+        background: transparent url('/assets/images/apple-pay-icon.png') center center no-repeat;
+        background-size: contain;
+        position: absolute;
+        top: 0;
+        transform: translateX(-150%);
+
+        @include mobileWidth {
+            display: none;
+        }
+    }
+}
