--- a/landing/development/sass/modules/_how-to-videos.scss
+++ b/landing/development/sass/modules/_how-to-videos.scss
@@ -2,6 +2,10 @@
 
     h6 {
         margin-bottom: 1rem;
+
+        @include mobileWidth {
+            font-size: 16px;
+        }
     }
 
     img {
@@ -18,6 +22,8 @@
         @include mobileWidth {
             margin-right: 0;
             margin-bottom: 2rem;
+            //left: 50%;
+            //transform: translateX(-50%);
         }
 
         @include tabletWidth {
