--- a/landing/development/sass/modules/_navigation.scss
+++ b/landing/development/sass/modules/_navigation.scss
@@ -8,6 +8,10 @@
 
     img.logo {
         vertical-align: middle;
+
+        @include mobileWidth {
+            max-width: 86px;
+        }
     }
 
     nav {
@@ -94,6 +98,127 @@
                     }
                 }
             }
+        }
+
+        &.lang-nav-mobile {
+            position: absolute;
+            left: 50%;
+
+            ul {
+                margin-left: 0;
+                padding-left: 0;
+                position: relative;
+                z-index: 23;
+                margin: 0;
+
+                li {
+                    //position: absolute;
+                    display: block;
+
+                    &:hover ul {
+                        opacity: 1;
+                        visibility: visible;
+                    }
+
+                    ul {
+                        position: absolute;
+                        left: 50%;
+                        transform: translate(-50%, 10px);
+                        display: block;
+                        opacity: 0;
+                        visibility: hidden;
+                        background-color: #fff;
+                        padding: .5rem 0;
+                        box-shadow: 0 0 4px rgba(255, 255, 255, .4);
+
+                        li {
+                            a {
+                                display: inline-block;
+                                padding: 0 1rem;
+                            }
+                        }
+                    }
+
+                    a {
+                        line-height: 24px;
+                    }
+                }
+            }
+
+            img {
+                width: 17px;
+                height: 17px;
+                position: relative;
+                top: 3px;
+            }
+        }
+
+        &.lang-nav-mobile > ul::after {
+            content: '';
+            width: 17px;
+            height: 24px;
+            display: inline-block;
+            background: transparent url('/assets/images/arrow-down.png') center center no-repeat;
+            position: absolute;
+            right: -22px;
+            top: 0;
+        }
+    }
+
+    div.nav-burger {
+        position: absolute;
+        right: 2rem;
+        width: 24px;
+        height: 24px;
+        background: transparent url('/assets/images/nav-burger.png') center center no-repeat;
+        background-size: contain;
+        cursor: pointer;
+
+        &.close-nav {
+            background: transparent url('/assets/images/close-menu.png') center center no-repeat;
+            background-size: 80%;
+        }
+    }
+
+    .main-nav-mobile {
+        position: absolute;
+        width: 100%;
+        margin: 0;
+        top: 3rem;
+        left: 0;
+        padding: 0;
+        z-index: 22;
+        display: none !important;
+        
+        ul {
+            width: 100%;
+            background-color: #363636;
+            margin: 0;
+            padding-left: 0;
+    
+            li {
+                display: block;
+                margin-right: 0;
+                overflow: hidden;
+
+                a {
+                    display: inline-block;
+                    padding: .4rem 2rem;
+                    margin: 0;
+                    width: 100%;
+                    color: #fff;
+
+                    &:hover {
+                        background-color: rgba(255, 255, 255, .8);
+                    }
+                }
+            }
+        }
+    }
+
+    .show-menu {
+        @include mobileWidth {
+            display: block !important;
         }
     }
 
