--- a/landing/development/sass/base/_typography.scss
+++ b/landing/development/sass/base/_typography.scss
@@ -84,7 +84,7 @@ h6 {
             content: '';
             height: 75px;
             width: 75px;
-            background: transparent url(/assets/images/apple-pay-icon.png) center center no-repeat;
+            background: transparent url('../../assets/images/apple-pay-icon.png') center center no-repeat;
             background-size: contain;
             position: absolute;
             top: 0;
