--- a/landing/development/sass/modules/_card-devices.scss
+++ b/landing/development/sass/modules/_card-devices.scss
@@ -22,7 +22,7 @@
         content: '';
         height: 65px;
         width: 65px;
-        background: transparent url('/assets/images/apple-pay-icon.png') center center no-repeat;
+        background: transparent url('../../assets/images/apple-pay-icon.png') center center no-repeat;
         background-size: contain;
         position: absolute;
         top: 0;
