--- a/landing/development/sass/modules/_hero-section.scss
+++ b/landing/development/sass/modules/_hero-section.scss
@@ -1,5 +1,5 @@
 .hero-section {
-    background: url('/assets/images/hero-background.png') center center no-repeat;
+    background: url('../../assets/images/hero-background.png') center center no-repeat;
     background-size: cover;
     padding-bottom: 0;
 
@@ -34,6 +34,7 @@
             
             img {
                 width: 100%;
+                vertical-align: bottom;
             }
         }
 
@@ -44,10 +45,10 @@
             content: " ";
             width: 227px;
             height: 60px;
-            background: transparent url(/assets/images/viabuy-apple-pay-hero-icon.png) no-repeat;
+            background: transparent url('../../assets/images/viabuy-apple-pay-hero-icon.png') no-repeat;
             background-size: contain;
             position: absolute;
-            bottom: 6.25rem;
+            bottom: 3.875rem;
             right: 0;
             transform: translateX(120%);
 
