--- a/landing/development/sass/modules/_modal.scss
+++ b/landing/development/sass/modules/_modal.scss
@@ -15,37 +15,42 @@
         left: 50%;
         transform: translate(-50%, -50%);
         background-color: #fff;
-        padding: 1rem 2rem;
+        padding: 0;
         width: 50rem;
 
         @include mobileWidth {
             width: 100vw;
         }
-    }
 
-    .close-modal {
-        float: right;
-        font-size: 1.5rem;
-        width: 2rem;
-        line-height: 2rem;
-        text-align: center;
-        cursor: pointer;
-        border: 1px solid #eee;
-        border-radius: 1rem;
-        background-color: #f9f9f9;
-        transition: all .075s linear;
-
-        &:hover {
-            border-color: #000;
-            background-color: #000;
-            color: #fff;
+        video {
+            width: 100%;
+            height: 100%;
         }
     }
 }
+
+.close-modal {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    font-size: 1.5rem;
+    width: 3rem;
+    height: 3rem;
+    background: transparent url('../../assets/images/close-modal.png') center center no-repeat;
+    background-size: 80%;
+    cursor: pointer;
+    transition: all .075s linear;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 23;
+
+    &:hover {
+    }
+}
+
 
 .show-modal {
     opacity: 1;
     visibility: visible;
     transition: visibility 0s linear 0s, opacity 0.2s 0s, popup .2s;
 }
-
