--- a/landing/development/sass/modules/_navigation.scss
+++ b/landing/development/sass/modules/_navigation.scss
@@ -1,6 +1,7 @@
 .main-navigation {
     padding: .6rem 0;
     background-color: #f9f9f9;
+    background-image: url('../../../assets/images/header-bg.jpg') repeat;
 
     .main-wrapper {
         position: relative;
@@ -8,6 +9,11 @@
 
     img.logo {
         vertical-align: middle;
+        
+        @include desktopWidth {
+            float: right;
+            margin-top: 10px;
+        }
 
         @include mobileWidth {
             max-width: 86px;
@@ -30,10 +36,27 @@
 
         ul {
             display: inline-block;
+            
+            @include desktopWidth {
+                position: relative;
+                bottom: -35px;
+                background: none;
+                padding-left: 0;
+            }
+
+            @include tabletWidth {
+                position: relative;
+                bottom: -35px;
+                background: none;
+                padding-left: 28px;
+            }
+
             li {
                 display: inline-block;
                 margin-right: 1rem;
                 position: relative;
+                margin: 0 0 0 -35px;
+                padding: 0;
 
                 ul.sub-menu {
                     opacity: 0;
@@ -92,9 +115,40 @@
                     color: $base_color;
                     text-decoration: none;
                     transition: color .05s linear;
+                    display: inline-block;
+                    height: 34px;
+                    padding-right: 48px;
+                    background: transparent url('../../../assets/images/menuButtonA.png') no-repeat scroll top right;
+                    
+                    span {
+                        display: inline-block;
+                        line-height: 34px;
+                        padding: 0 10px 0 30px;
+                        background: transparent url('../../../assets/images/menuButtonSpan.png') no-repeat;
+                    }
 
                     &:hover {
-                        color: #000;
+                        color: #fff;
+                        background: transparent url('../../../assets/images/menuButtonActiveA.png') no-repeat scroll top right;
+
+                        span {
+                            background: transparent url('../../../assets/images/menuButtonActiveSpan.png') no-repeat;
+                        }
+                    }
+                }
+
+                &.active {
+
+                    a {
+                        color: #fff;
+                        background: transparent url('../../../assets/images/menuButtonActiveA.png') no-repeat scroll top right;
+                        span {
+                            background: transparent url('../../../assets/images/menuButtonActiveSpan.png') no-repeat;
+                        }
+                    }
+
+                    a:hover {
+                        color: #fff;
                     }
                 }
             }
