--- a/landing/development/sass/base/_general.scss
+++ b/landing/development/sass/base/_general.scss
@@ -11,6 +11,7 @@
 }
 
 .apple-pay-illustration {
+    margin-top: 16px;
     max-width: 372px;
 
     @include mobileWidth {
@@ -87,4 +88,10 @@
 
 .full-width {
     width: 100%;
+}
+
+@include desktopWidth {
+    .google-play-icon {
+        margin-right: 40px;
+    }
 }
